refactor(modeling): unify model target resolution
Resolve handler parameters, ordinary targets, and direct prefetches through one metadata-aware target path. This removes parallel dependency carriers while preserving deterministic reference order and empty collection semantics.